# sasaki

./: .gitignore  Cargo.toml  README.md  conf.ini  conf.ini.example
src/: conf.rs  handler.rs  macros.rs  main.rs  sasaki.rs  types.rs
src/collections/: highlighting.rs  mod.rs
src/commands/: cockroach.rs  meta.rs  mod.rs  owner.rs  voice.rs
src/common/: log.rs  msg.rs
src/data/: mod.rs
src/db/: mod.rs  model.rs  schema.rs
