[package]
name = "sasaki"
version = "0.1.8"
authors = [ "Cynede <codecaves@gmail.com>" ]
repository = "https://github.com/Cynede/sasaki"
readme = "README.md"
keywords = [ "discord", "bot" ]

[dependencies]
rand = "*"
chrono = "*"
typemap = "*"
rust-ini = "*"
argparse = "*"
log = "*"
env_logger = "*"
curl = "*"
regex = "*"
serde_json = "*"
lazy_static = "*"
ssh2 = "*"
serenity = { version = "*", features = ["cache", "framework", "standard_framework", "voice"] }

[dependencies.dotenv]
features = []
version = "0.10.1"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "*"

[dependencies.diesel]
features = ["postgres"]
version = "*"
