[package]
name = "sasaki"
version = "0.3.1"
authors = [ "Cynede <codecaves@gmail.com>" ]
repository = "https://github.com/Cynede/sasaki"
readme = "README.md"
keywords = [ "discord", "bot" ]
edition = "2018"

[dependencies]
rand = "*"
chrono = "*"
typemap = "*"
rust-ini = "*"
argparse = "*"
log = "*"
env_logger = "*"
curl = "*"
regex = "*"
serde_json = "*"
lazy_static = "*"
ssh2 = "*"

# diesel blocking
uuid = { version = "0.6.5", features = ["serde"] }
serenity = { version = "*", features = ["cache", "framework", "standard_framework", "voice"] }

[dependencies.dotenv]
features = []
version = "0.10.1"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "*"

[dependencies.diesel]
features = ["uuid", "postgres"]
version = "*"
