[package]
name = "sasaki"
version = "0.3.3"
authors = [ "Cynede <codecaves@gmail.com>" ]
repository = "https://github.com/Cynede/sasaki"
readme = "README.md"
keywords = [ "discord", "bot" ]
edition = "2018"

[dependencies]
rand = "0.6.5"
chrono = "0.4.6"
typemap = "0.3.3"
rust-ini = "0.13.0"
argparse = "0.2.2"
log = "0.4.6"
env_logger = "0.6.1"
curl = "0.4.21"
regex = "1.1.6"
serde_json = "1.0.39"
lazy_static = "1.3.0"
ssh2 = "0.3.3"

# diesel blocking
uuid = { version = "0.6.5", features = ["serde"] }
serenity = { version = "0.5.14", features = ["cache", "framework", "standard_framework", "voice"] }

[dependencies.dotenv]
features = []
version = "0.10.1"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.1"

[dependencies.diesel]
features = ["uuid", "postgres"]
version = "1.4.2"
